--- a/memmapper/node-postgres/backend/.env
+++ b/memmapper/node-postgres/backend/.env
@@ -3,3 +3,6 @@ DB_PASSWORD=rawr
 DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=travel
+
+COOKIE_SECRET=hsadfihi8345uy34jj948ds
+ENVIRONMENT=development
