--- a/memmapper/package.json
+++ b/memmapper/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/renderer": "^3.1.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.5.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
