--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "passport": "^0.7.0",
     "pg": "^8.11.3",
     "puppeteer": "^21.5.1"
   }
